# openrazer-gtk

./: .gitignore  README.md  install.sh  pyproject.toml
po/: en_US.po  pt_BR.po  razer-gtk.pot
razer_gtk/: __main__.py  i18n.py  main.py  tray_helper.py  window.py
razer_gtk/backend/: autostart.py  daemon_settings.py  device_adapter.py  device_icons.py  device_images.py  device_names.py  errors.py  manager.py  presets.py  settings.py
razer_gtk/dialogs/: color_picker.py  dpi_stage_editor.py  preferences.py  restart_prompt.py
razer_gtk/locale/en_US/LC_MESSAGES/: razer-gtk.mo
razer_gtk/locale/pt_BR/LC_MESSAGES/: razer-gtk.mo
razer_gtk/resources/: style.css
razer_gtk/widgets/: color_swatch_row.py  device_overview.py  device_sidebar.py  effect_controls.py  pill_row.py  pill_selector.py
razer_gtk/widgets/cards/: battery_card.py  dpi_card.py  lighting_card.py  presets_card.py
